# AStar

./: CMakeLists.txt  Doxyfile  README.md
examples/: 01_example.cpp  01_example_simple.cpp  02_example_map_operations.cpp  03_example_vehicle_move.cpp  04_example_other.cpp  05_example_find_best_solution.cpp  06_example_closed_map.cpp  CMakeLists.txt  example_map  example_map_closed
include/: astar.hpp  board.hpp  boardContainer.hpp  distanceCompute.hpp  extras.hpp  listState.hpp  stateDataType.hpp  vehicleMovement.hpp
src/: CMakeLists.txt  astar.cpp  board.cpp  boardContainer.cpp  listState.cpp  stateDataType.cpp
test/: CMakeLists.txt  boardContainerTest.cpp  listStateTest.cpp
